--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
       <module>cloud-consumer-feign-order80</module>
       <module>cloud-provider-hystrix-payment8001</module>
       <module>cloud-consumer-feign-hystrix-order80</module>
+      <module>cloud-gateway-gateway9527</module>
+      <module>cloud-provider-payment8002</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
