--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
       <module>cloud-consumer-feign-hystrix-order80</module>
       <module>cloud-gateway-gateway9527</module>
       <module>cloud-provider-payment8002</module>
+      <module>cloud-config-center-3344</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
