--- a/cloud-config-center-3344/src/main/resources/config/bootstrap.yml
+++ b/cloud-config-center-3344/src/main/resources/config/bootstrap.yml
@@ -11,8 +11,21 @@ spring:
           search-paths:
             - springcloud-config
       label: main
+  rabbitmq:
+    host: 192.168.0.88
+    port: 5672
+    username: guest
+    password: guest
+
 eureka:
   client:
     service-url:
       defaultZone:  http://localhost:7001/eureka
 
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
