--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
       <module>cloud-gateway-gateway9527</module>
       <module>cloud-provider-payment8002</module>
       <module>cloud-config-center-3344</module>
+    <module>cloudalibaba-provider-payment9001</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
